--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -11,7 +11,7 @@
     width: 100vw;
     height: 4.5em;
     font-family: "Poppins";   
-
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.25);
     img {
         width: 3em;
         margin-left: 1.5em;
